[package]
name = "vyper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vyper"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.6"
spin = "0.10.0"
log = { version = "0.4.29", default-features = false }
x86_64 = "0.15.4"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]
